Tue Feb 22 01:52:09 2000  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>

	* ace/Message_Block.cpp: Refactored the code in duplicate()
	  and clone() so that it doesn't have macro within macros.
	  Thanks to Nanbor for reporting this. 

Tue Feb 22 01:19:40 2000  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/MEM_IO.h: Added more comments.

Tue Feb 22 00:39:03 2000  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/MEM_IO.h: Changed method fetch_recv_buf as protected and
	  added some missing comments.

	* ace/MEM_Acceptor.h:
	* ace/MEM_Connector.h: Added some missing comments.

Mon Feb 21 20:40:37 2000  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>

	* ace/MEM_*: Minor modifications to formatting here.

	* tests/Dynamic_Priority_Test.cpp: Only run this test if
 	  ACE_HAS_TIMED_MESSAGE_BLOCKS is enabled.

	* ace/Message_Block: By default, the deadline_time_ and execution_time_
	  data members are now omitted and their accessor/mutator
 	  operations rendered "no-op"s unless ACE_HAS_TIMED_MESSAGE_BLOCKS
 	  is enabled.  This is necessary to avoid an unnecessary 16 bytes
 	  per-Message_Block.  Thanks to Irfan for pointing this out.

Mon Feb 21 17:22:33 2000  Ossama Othman  <ossama@uci.edu>

	* configure.in (ACE_LACKS_SETREUID):

	  Fixed typo.

	  (ACE_HAS_SOCKADDR_MSG_NAME):

	  Fixed broken test.  A `struct sockaddr' was being cast to a
	  `struct sockaddr *', which is obviously broken.  This fix has
	  the side effect of causing ACE_HAS_SOCKADDR_MSG_NAME to be
	  defined on platforms where the "msg_name" field of the "msghdr"
	  structure is a `void*', such as Linux and Solaris.  This isn't
	  necessarily a bad thing since it is perfectly valid.

	  (ACE_HAS_VOIDPTR_SOCKOPT, ACE_HAS_CHARPTR_SOCKOPT):

	  Fixed the tests for these two macros.  The fifth "optlen"
	  argument to setsockopt() was being passed in as a pointer to
	  some integral type.  The "optlen" argument to setsockopt() is
	  not a pointer.  Rather, it should be one of the following: